--- a/html/favorites.html
+++ b/html/favorites.html
@@ -1,1 +1,84 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet"><link rel="stylesheet" href="Tasty-Treats.268eeab8.css"><link rel="stylesheet" href="favorites.0a311332.css"></head><body> <header class="header"> <div class="header-container"> <div class="header-container-logo light" id="light-theme-logo"> <div class="desktop-list header-list"> <a href="index.html">Home</a> <a href="html/favorites.html">Favorites</a> </div> <a href="index.html"> <img src="logo.e9bd8f13.svg" alt="logo" id="home" width="83px" height="18px"></a> <div class="header-icons"> <img src="shopping-cart.82c8e679.svg" alt="logo"> <img src="burger-menu.0653d4e8.svg" alt="logo" id="open-sidebar"> <label class="theme-switch"> <input type="checkbox" id="theme-toggle-light"> <span class="slider"></span> </label> </div> </div> <div class="dark header-container-logo" id="dark-theme-logo"> <div class="desktop-list header-list"> <a href="index.html">Home</a> <a href="html/favorites.html">Favorites</a> </div> <a href="index.html"> <img src="logo-dark.d8c53fc4.svg" alt="logo" id="home" width="83px" height="18px"></a> <div class="header-icons"> <img src="shopping-cart-dark.e806bf0a.svg" alt="logo"> <img src="burger-menu-dark.ea575595.svg" alt="logo" id="open-sidebar"> <label class="theme-switch"> <input type="checkbox" id="theme-toggle-dark"> <span class="slider"></span> </label> </div> </div> <div class="sidebar" id="sidebar"> <div class="sidebar-content" id="sidebar-content"> <button class="close-sidebar" id="close-sidebar"> <img src="close-sidebar.1f169892.svg" alt="close-button"> </button> <div class="mobile-list sidebar-list"> <a href="index.html">Home</a> <a href="html/favorites.html">Favorites</a> <label class="theme-switch-sidebar"> <input type="checkbox" id="theme-toggle-sidebar"> <span class="slider"></span> </label> </div> </div> </div> </div> </header> <section class="main-content"> <div class="empty-page"> <img src="favorites-img-tablet.758190f7.png" alt="food on a plate" class="favorites-img-tablet"> <img src="favorites-img-desktop.975127a7.png" alt="food on a plate" class="favorites-img-desktop"> <img src="favorites-empty-page.2858c375.svg" alt="empty-page"> <p> It appears that you haven't added any recipes to your favorites yet. To get started, you can add recipes that you like to your favorites for easier access in the future. </p> </div> </section> <script type="module" src="Tasty-Treats.d1fc7862.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tasty Treats</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/Tasty-Treats.77a9bc14.css">
+    <link rel="stylesheet" href="/favorites.6de4b61c.css">
+  </head>
+  <body>
+    <header class="header">
+      <div class="header-container">
+        <div class="header-container-logo light" id="light-theme-logo">
+          <div class="header-list desktop-list">
+            <a href="/index.html">Home</a>
+            <a href="/html/favorites.html">Favorites</a>
+          </div>
+          <a href="/index.html">
+            <img src="/logo.b6fef13c.svg" alt="logo" id="home" width="83px" height="18px"></a>
+          <div class="header-icons">
+            <img src="/shopping-cart.aac26c00.svg" alt="logo">
+            <img src="/burger-menu.e17fc20b.svg" alt="logo" id="open-sidebar">
+
+            <label class="theme-switch">
+              <input type="checkbox" id="theme-toggle-light">
+              <span class="slider"></span>
+            </label>
+          </div>
+        </div>
+
+        <div class="header-container-logo dark" id="dark-theme-logo">
+          <div class="header-list desktop-list">
+            <a href="/index.html">Home</a>
+            <a href="/html/favorites.html">Favorites</a>
+          </div>
+          <a href="/index.html">
+            <img src="/logo-dark.98149d8e.svg" alt="logo" id="home" width="83px" height="18px"></a>
+
+          <div class="header-icons">
+            <img src="/shopping-cart-dark.fe263bd8.svg" alt="logo">
+            <img src="/burger-menu-dark.d96013fd.svg" alt="logo" id="open-sidebar">
+            <label class="theme-switch">
+              <input type="checkbox" id="theme-toggle-dark">
+              <span class="slider"></span>
+            </label>
+          </div>
+        </div>
+
+        <div class="sidebar" id="sidebar">
+          <div class="sidebar-content" id="sidebar-content">
+            <button class="close-sidebar" id="close-sidebar">
+              <img src="/close-sidebar.15d7204f.svg" alt="close-button">
+            </button>
+            <div class="sidebar-list mobile-list">
+              <a href="/index.html">Home</a>
+              <a href="/html/favorites.html">Favorites</a>
+              <label class="theme-switch-sidebar">
+                <input type="checkbox" id="theme-toggle-sidebar">
+                <span class="slider"></span>
+              </label>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <section class="main-content">
+      <div class="empty-page">
+        <img src="/favorites-img-tablet.49687d80.png" alt="food on a plate" class="favorites-img-tablet">
+        <img src="/favorites-img-desktop.3f4a3f07.png" alt="food on a plate" class="favorites-img-desktop">
+        <img src="/favorites-empty-page.80df632f.svg" alt="empty-page">
+        <p>
+          It appears that you haven't added any recipes to your favorites yet.
+          To get started, you can add recipes that you like to your favorites
+          for easier access in the future.
+        </p>
+      </div>
+    </section>
+    <script type="module" src="/Tasty-Treats.31b563d9.js"></script>
+  </body>
+</html>
