--- a/index.html
+++ b/index.html
@@ -1,1 +1,107 @@
-<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet"><link rel="stylesheet" href="Tasty-Treats.268eeab8.css"></head><body> <header class="header"> <div class="header-container"> <div class="header-container-logo light" id="light-theme-logo"> <div class="desktop-list header-list"> <a href="#home">Home</a> <a href="html/favorites.html">Favorites</a> </div> <a href="index.html"> <img src="logo.e9bd8f13.svg" alt="logo" id="home" width="83px" height="18px"></a> <div class="header-icons"> <img src="shopping-cart.82c8e679.svg" alt="logo"> <img src="burger-menu.0653d4e8.svg" alt="logo" id="open-sidebar"> <label class="theme-switch"> <input type="checkbox" id="theme-toggle-light"> <span class="slider"></span> </label> </div> </div> <div class="dark header-container-logo" id="dark-theme-logo"> <div class="desktop-list header-list"> <a href="#home">Home</a> <a href="html/favorites.html">Favorites</a> </div> <a href="index.html"> <img src="logo-dark.d8c53fc4.svg" alt="logo" id="home" width="83px" height="18px"> </a> <div class="header-icons"> <img src="shopping-cart-dark.e806bf0a.svg" alt="logo"> <img src="burger-menu-dark.ea575595.svg" alt="logo" id="open-sidebar"> <label class="theme-switch"> <input type="checkbox" id="theme-toggle-dark"> <span class="slider"></span> </label> </div> </div> <div class="sidebar" id="sidebar"> <div class="sidebar-content" id="sidebar-content"> <button class="close-sidebar" id="close-sidebar"> <img src="close-sidebar.1f169892.svg" alt="close-button"> </button> <div class="mobile-list sidebar-list"> <a href="#home">Home</a> <a href="html/favorites.html">Favorites</a> <label class="theme-switch-sidebar"> <input type="checkbox" id="theme-toggle-sidebar"> <span class="slider"></span> </label> </div> </div> </div> </div> </header> <section class="hero"> <div class="hero-container"> <div class="hero-title"> <h2> Learn to Cook <span>Tasty Treats'</span> Customizable Masterclass </h2> <h3> TastyTreats - Customize Your Meal with Ingredient Options and Step-by-Step Video Guides. </h3> </div> <button class="order-button" id="open-order-now-modal"> Order now </button> </div> <div class="order-now-modal" id="order-now-modal"> <div class="order-now-content"> <img src="close-black.2d3df6a8.svg" alt="close-button" class="close-order-now-modal" id="close-order-now-modal"> <h3>Order now</h3> <form class="order-now-form" id="order-now-form"> <label for="name">Name</label> <input type="text" id="name" name="name" required pattern="[A-Za-z\s]+"> <label for="phone">Phone number</label> <input type="tel" id="phone" required pattern="\d{10}"> <label for="email">Email</label> <input type="email" id="email" name="email" required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"> <label for="text">Comment</label> <textarea id="text" name="text" rows="4"></textarea> <button type="submit" class="send-order-btn">Send</button> </form> </div> </div> </section> <script type="module" src="Tasty-Treats.d1fc7862.js"></script> </body></html>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Tasty Treats</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="/Tasty-Treats.77a9bc14.css">
+  </head>
+  <body>
+    <header class="header">
+      <div class="header-container">
+        <div class="header-container-logo light" id="light-theme-logo">
+          <div class="header-list desktop-list">
+            <a href="#home">Home</a>
+            <a href="/html/favorites.html">Favorites</a>
+          </div>
+          <a href="/index.html">
+            <img src="/logo.b6fef13c.svg" alt="logo" id="home" width="83px" height="18px"></a>
+          <div class="header-icons">
+            <img src="/shopping-cart.aac26c00.svg" alt="logo">
+            <img src="/burger-menu.e17fc20b.svg" alt="logo" id="open-sidebar">
+
+            <label class="theme-switch">
+              <input type="checkbox" id="theme-toggle-light">
+              <span class="slider"></span>
+            </label>
+          </div>
+        </div>
+
+        <div class="header-container-logo dark" id="dark-theme-logo">
+          <div class="header-list desktop-list">
+            <a href="#home">Home</a>
+            <a href="/html/favorites.html">Favorites</a>
+          </div>
+          <a href="/index.html">
+            <img src="/logo-dark.98149d8e.svg" alt="logo" id="home" width="83px" height="18px">
+          </a>
+          <div class="header-icons">
+            <img src="/shopping-cart-dark.fe263bd8.svg" alt="logo">
+            <img src="/burger-menu-dark.d96013fd.svg" alt="logo" id="open-sidebar">
+            <label class="theme-switch">
+              <input type="checkbox" id="theme-toggle-dark">
+              <span class="slider"></span>
+            </label>
+          </div>
+        </div>
+
+        <div class="sidebar" id="sidebar">
+          <div class="sidebar-content" id="sidebar-content">
+            <button class="close-sidebar" id="close-sidebar">
+              <img src="/close-sidebar.15d7204f.svg" alt="close-button">
+            </button>
+            <div class="sidebar-list mobile-list">
+              <a href="#home">Home</a>
+              <a href="/html/favorites.html">Favorites</a>
+              <label class="theme-switch-sidebar">
+                <input type="checkbox" id="theme-toggle-sidebar">
+                <span class="slider"></span>
+              </label>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+    <section class="hero">
+      <div class="hero-container">
+        <div class="hero-title">
+          <h2>
+            Learn to Cook <span>Tasty Treats'</span> Customizable Masterclass
+          </h2>
+          <h3>
+            TastyTreats - Customize Your Meal with Ingredient Options and
+            Step-by-Step Video Guides.
+          </h3>
+        </div>
+        <button class="order-button" id="open-order-now-modal">
+          Order now
+        </button>
+      </div>
+
+      <div class="order-now-modal" id="order-now-modal">
+        <div class="order-now-content">
+          <img src="/close-black.ce2681c4.svg" alt="close-button" class="close-order-now-modal" id="close-order-now-modal">
+
+          <h3>Order now</h3>
+          <form class="order-now-form" id="order-now-form">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" required="" pattern="[A-Za-z\s]+">
+            <label for="phone">Phone number</label>
+            <input type="tel" id="phone" required="" pattern="\d{10}">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" required="" pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$">
+            <label for="text">Comment</label>
+            <textarea id="text" name="text" rows="4"></textarea>
+
+            <button type="submit" class="send-order-btn">Send</button>
+          </form>
+        </div>
+      </div>
+    </section>
+
+    <script type="module" src="/Tasty-Treats.31b563d9.js"></script>
+  </body>
+</html>
