--- a/src/index.html
+++ b/src/index.html
@@ -22,16 +22,16 @@
           </div>
           <a href="./index.html">
             <img
-              src="../assets/logo/logo.svg"
+              src="./assets/logo/logo.svg"
               alt="logo"
               id="home"
               width="83px"
               height="18px"
           /></a>
           <div class="header-icons">
-            <img src="../assets/logo/shopping-cart.svg" alt="logo" />
+            <img src="./assets/logo/shopping-cart.svg" alt="logo" />
             <img
-              src="../assets/logo/burger-menu.svg"
+              src="./assets/logo/burger-menu.svg"
               alt="logo"
               id="open-sidebar"
             />
@@ -50,7 +50,7 @@
           </div>
           <a href="./index.html">
             <img
-              src="../assets/logo/logo-dark.svg"
+              src="./assets/logo/logo-dark.svg"
               alt="logo"
               id="home"
               width="83px"
@@ -58,9 +58,9 @@
             />
           </a>
           <div class="header-icons">
-            <img src="../assets/logo/shopping-cart-dark.svg" alt="logo" />
+            <img src="./assets/logo/shopping-cart-dark.svg" alt="logo" />
             <img
-              src="../assets/logo/burger-menu-dark.svg"
+              src="./assets/logo/burger-menu-dark.svg"
               alt="logo"
               id="open-sidebar"
             />
@@ -74,7 +74,7 @@
         <div class="sidebar" id="sidebar">
           <div class="sidebar-content" id="sidebar-content">
             <button class="close-sidebar" id="close-sidebar">
-              <img src="../assets/logo/close-sidebar.svg" alt="close-button" />
+              <img src="./assets/logo/close-sidebar.svg" alt="close-button" />
             </button>
             <div class="sidebar-list mobile-list">
               <a href="#home">Home</a>
@@ -107,7 +107,7 @@
       <div class="order-now-modal" id="order-now-modal">
         <div class="order-now-content">
           <img
-            src="../assets/logo/close-black.svg"
+            src="./assets/logo/close-black.svg"
             alt="close-button"
             class="close-order-now-modal"
             id="close-order-now-modal"
