--- a/src/html/favorites.html
+++ b/src/html/favorites.html
@@ -23,16 +23,16 @@
           </div>
           <a href="../index.html">
             <img
-              src="/assets/logo/logo.svg"
+              src="../assets/logo/logo.svg"
               alt="logo"
               id="home"
               width="83px"
               height="18px"
           /></a>
           <div class="header-icons">
-            <img src="/assets/logo/shopping-cart.svg" alt="logo" />
+            <img src="../assets/logo/shopping-cart.svg" alt="logo" />
             <img
-              src="/assets/logo/burger-menu.svg"
+              src="../assets/logo/burger-menu.svg"
               alt="logo"
               id="open-sidebar"
             />
@@ -51,7 +51,7 @@
           </div>
           <a href="../index.html">
             <img
-              src="/assets/logo/logo-dark.svg"
+              src="../assets/logo/logo-dark.svg"
               alt="logo"
               id="home"
               width="83px"
@@ -59,9 +59,9 @@
           /></a>
 
           <div class="header-icons">
-            <img src="/assets/logo/shopping-cart-dark.svg" alt="logo" />
+            <img src="../assets/logo/shopping-cart-dark.svg" alt="logo" />
             <img
-              src="/assets/logo/burger-menu-dark.svg"
+              src="../assets/logo/burger-menu-dark.svg"
               alt="logo"
               id="open-sidebar"
             />
@@ -75,7 +75,7 @@
         <div class="sidebar" id="sidebar">
           <div class="sidebar-content" id="sidebar-content">
             <button class="close-sidebar" id="close-sidebar">
-              <img src="/assets/logo/close-sidebar.svg" alt="close-button" />
+              <img src="../assets/logo/close-sidebar.svg" alt="close-button" />
             </button>
             <div class="sidebar-list mobile-list">
               <a href="../index.html">Home</a>
@@ -93,19 +93,16 @@
     <section class="main-content">
       <div class="empty-page">
         <img
-          src="../../assets/images/favorites-img-tablet.png"
+          src="../assets/images/favorites-img-tablet.png"
           alt="food on a plate"
           class="favorites-img-tablet"
         />
         <img
-          src="../../assets/images/favorites-img-desktop.png"
+          src="../assets/images/favorites-img-desktop.png"
           alt="food on a plate"
           class="favorites-img-desktop"
         />
-        <img
-          src="../../assets/logo/favorites-empty-page.svg"
-          alt="empty-page"
-        />
+        <img src="../assets/logo/favorites-empty-page.svg" alt="empty-page" />
         <p>
           It appears that you haven't added any recipes to your favorites yet.
           To get started, you can add recipes that you like to your favorites
