--- a/src/favorites.html
+++ b/src/favorites.html
@@ -10,29 +10,29 @@
       href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/styles.css" />
-    <link rel="stylesheet" href="../css/favorites.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
+    <link rel="stylesheet" href="./css/favorites.css" />
   </head>
   <body>
     <header class="header">
       <div class="header-container">
         <div class="header-container-logo light" id="light-theme-logo">
           <div class="header-list desktop-list">
-            <a href="../index.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./favorites.html">Favorites</a>
           </div>
-          <a href="../index.html">
+          <a href="./index.html">
             <img
-              src="../assets/logo/logo.svg"
+              src="./assets/logo/logo.svg"
               alt="logo"
               id="home"
               width="83px"
               height="18px"
           /></a>
           <div class="header-icons">
-            <img src="../assets/logo/shopping-cart.svg" alt="logo" />
+            <img src="./assets/logo/shopping-cart.svg" alt="logo" />
             <img
-              src="../assets/logo/burger-menu.svg"
+              src="./assets/logo/burger-menu.svg"
               alt="logo"
               id="open-sidebar"
             />
@@ -46,12 +46,12 @@
 
         <div class="header-container-logo dark" id="dark-theme-logo">
           <div class="header-list desktop-list">
-            <a href="../index.html">Home</a>
+            <a href="./index.html">Home</a>
             <a href="./favorites.html">Favorites</a>
           </div>
-          <a href="../index.html">
+          <a href="./index.html">
             <img
-              src="../assets/logo/logo-dark.svg"
+              src="./assets/logo/logo-dark.svg"
               alt="logo"
               id="home"
               width="83px"
@@ -59,9 +59,9 @@
           /></a>
 
           <div class="header-icons">
-            <img src="../assets/logo/shopping-cart-dark.svg" alt="logo" />
+            <img src="./assets/logo/shopping-cart-dark.svg" alt="logo" />
             <img
-              src="../assets/logo/burger-menu-dark.svg"
+              src="./assets/logo/burger-menu-dark.svg"
               alt="logo"
               id="open-sidebar"
             />
@@ -75,10 +75,10 @@
         <div class="sidebar" id="sidebar">
           <div class="sidebar-content" id="sidebar-content">
             <button class="close-sidebar" id="close-sidebar">
-              <img src="../assets/logo/close-sidebar.svg" alt="close-button" />
+              <img src="./assets/logo/close-sidebar.svg" alt="close-button" />
             </button>
             <div class="sidebar-list mobile-list">
-              <a href="../index.html">Home</a>
+              <a href="./index.html">Home</a>
               <a href="./favorites.html">Favorites</a>
               <label class="theme-switch-sidebar">
                 <input type="checkbox" id="theme-toggle-sidebar" />
@@ -93,16 +93,16 @@
     <section class="main-content">
       <div class="empty-page">
         <img
-          src="../assets/images/favorites-img-tablet.png"
+          src="./assets/images/favorites-img-tablet.png"
           alt="food on a plate"
           class="favorites-img-tablet"
         />
         <img
-          src="../assets/images/favorites-img-desktop.png"
+          src="./assets/images/favorites-img-desktop.png"
           alt="food on a plate"
           class="favorites-img-desktop"
         />
-        <img src="../assets/logo/favorites-empty-page.svg" alt="empty-page" />
+        <img src="./assets/logo/favorites-empty-page.svg" alt="empty-page" />
         <p>
           It appears that you haven't added any recipes to your favorites yet.
           To get started, you can add recipes that you like to your favorites
@@ -110,6 +110,6 @@
         </p>
       </div>
     </section>
-    <script type="module" src="../index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
