--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
         <div class="header-container-logo light" id="light-theme-logo">
           <div class="header-list desktop-list">
             <a href="#home">Home</a>
-            <a href="./html/favorites.html">Favorites</a>
+            <a href="./favorites.html">Favorites</a>
           </div>
           <a href="./index.html">
             <img
@@ -46,7 +46,7 @@
         <div class="header-container-logo dark" id="dark-theme-logo">
           <div class="header-list desktop-list">
             <a href="#home">Home</a>
-            <a href="./html/favorites.html">Favorites</a>
+            <a href="./favorites.html">Favorites</a>
           </div>
           <a href="./index.html">
             <img
@@ -78,7 +78,7 @@
             </button>
             <div class="sidebar-list mobile-list">
               <a href="#home">Home</a>
-              <a href="./html/favorites.html">Favorites</a>
+              <a href="./favorites.html">Favorites</a>
               <label class="theme-switch-sidebar">
                 <input type="checkbox" id="theme-toggle-sidebar" />
                 <span class="slider"></span>
