--- a/favorites.html
+++ b/favorites.html
@@ -1,1 +1,72 @@
-<!DOCTYPE html><html lang="en"><head><link rel="stylesheet" href="/Tasty-Treats/Tasty-Treats.34248942.css"><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet"><link rel="stylesheet" href="/Tasty-Treats/Tasty-Treats.e554346a.css"><link rel="stylesheet" href="/Tasty-Treats/favorites.ce992728.css"></head><body> <header class="header"> <div class="header-container"> <div class="header-container-logo light" id="light-theme-logo"> <div class="desktop-list header-list"> <a href="/Tasty-Treats/index.html">Home</a> <a href="/Tasty-Treats/favorites.html">Favorites</a> </div> <a href="/Tasty-Treats/index.html"> <img src="/Tasty-Treats/logo.e9bd8f13.svg" alt="logo" id="home" width="83px" height="18px"></a> <div class="header-icons"> <img src="/Tasty-Treats/shopping-cart.82c8e679.svg" alt="logo"> <img src="/Tasty-Treats/burger-menu.0653d4e8.svg" alt="logo" id="open-sidebar"> <label class="theme-switch"> <input type="checkbox" id="theme-toggle-light"> <span class="slider"></span> </label> </div> </div> <div class="dark header-container-logo" id="dark-theme-logo"> <div class="desktop-list header-list"> <a href="/Tasty-Treats/index.html">Home</a> <a href="/Tasty-Treats/favorites.html">Favorites</a> </div> <a href="/Tasty-Treats/index.html"> <img src="/Tasty-Treats/logo-dark.d8c53fc4.svg" alt="logo" id="home" width="83px" height="18px"></a> <div class="header-icons"> <img src="/Tasty-Treats/shopping-cart-dark.e806bf0a.svg" alt="logo"> <img src="/Tasty-Treats/burger-menu-dark.ea575595.svg" alt="logo" id="open-sidebar"> <label class="theme-switch"> <input type="checkbox" id="theme-toggle-dark"> <span class="slider"></span> </label> </div> </div> <div class="sidebar" id="sidebar"> <div class="sidebar-content" id="sidebar-content"> <button class="close-sidebar" id="close-sidebar"> <img src="/Tasty-Treats/close-sidebar.1f169892.svg" alt="close-button"> </button> <div class="mobile-list sidebar-list"> <a href="/Tasty-Treats/index.html">Home</a> <a href="/Tasty-Treats/favorites.html">Favorites</a> <label class="theme-switch-sidebar"> <input type="checkbox" id="theme-toggle-sidebar"> <span class="slider"></span> </label> </div> </div> </div> </div> </header> <section class="main-content"> <div class="empty-page"> <img src="/Tasty-Treats/favorites-img-tablet.758190f7.png" alt="food on a plate" class="favorites-img-tablet"> <img src="/Tasty-Treats/favorites-img-desktop.975127a7.png" alt="food on a plate" class="favorites-img-desktop"> <img src="/Tasty-Treats/favorites-empty-page.2858c375.svg" alt="empty-page"> <p> It appears that you haven't added any recipes to your favorites yet. To get started, you can add recipes that you like to your favorites for easier access in the future. </p> </div> </section> <script type="module" src="/Tasty-Treats/Tasty-Treats.40ba6620.js"></script> </body></html>
+<!DOCTYPE html><html lang=en><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.34248942.css><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.7b41ef18.css><link rel=stylesheet href=/Tasty-Treats/favorites.ce992728.css><body>
+    <header class=header>
+      <div class=header-container>
+        <div class="header-container-logo light" id=light-theme-logo>
+          <div class="desktop-list header-list">
+            <a href=/Tasty-Treats/index.html>Home</a>
+            <a href=/Tasty-Treats/favorites.html>Favorites</a>
+          </div>
+          <a href=/Tasty-Treats/index.html>
+            <img src=/Tasty-Treats/logo.14db68ec.svg alt=logo id=home width=83px height=18px></a>
+          <div class=header-icons>
+            <img src=/Tasty-Treats/shopping-cart.82fd3564.svg alt=logo>
+            <img src=/Tasty-Treats/burger-menu.ee09b074.svg alt=logo id=open-sidebar>
+
+            <label class=theme-switch>
+              <input type=checkbox id=theme-toggle-light>
+              <span class=slider></span>
+            </label>
+          </div>
+        </div>
+
+        <div class="dark header-container-logo" id=dark-theme-logo>
+          <div class="desktop-list header-list">
+            <a href=/Tasty-Treats/index.html>Home</a>
+            <a href=/Tasty-Treats/favorites.html>Favorites</a>
+          </div>
+          <a href=/Tasty-Treats/index.html>
+            <img src=/Tasty-Treats/logo-dark.84860f68.svg alt=logo id=home width=83px height=18px></a>
+
+          <div class=header-icons>
+            <img src=/Tasty-Treats/shopping-cart-dark.0d1f8c3c.svg alt=logo>
+            <img src=/Tasty-Treats/burger-menu-dark.8563644c.svg alt=logo id=open-sidebar>
+            <label class=theme-switch>
+              <input type=checkbox id=theme-toggle-dark>
+              <span class=slider></span>
+            </label>
+          </div>
+        </div>
+
+        <div class=sidebar id=sidebar>
+          <div class=sidebar-content id=sidebar-content>
+            <button class=close-sidebar id=close-sidebar>
+              <img src=/Tasty-Treats/close-sidebar.6a9c5444.svg alt=close-button>
+            </button>
+            <div class="mobile-list sidebar-list">
+              <a href=/Tasty-Treats/index.html>Home</a>
+              <a href=/Tasty-Treats/favorites.html>Favorites</a>
+              <label class=theme-switch-sidebar>
+                <input type=checkbox id=theme-toggle-sidebar>
+                <span class=slider></span>
+              </label>
+            </div>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <section class=main-content>
+      <div class=empty-page>
+        <img src=/Tasty-Treats/favorites-img-tablet.758190f7.png alt="food on a plate" class=favorites-img-tablet>
+        <img src=/Tasty-Treats/favorites-img-desktop.975127a7.png alt="food on a plate" class=favorites-img-desktop>
+        <img src=/Tasty-Treats/favorites-empty-page.3ae6dfe2.svg alt=empty-page>
+        <p>
+          It appears that you haven't added any recipes to your favorites yet.
+          To get started, you can add recipes that you like to your favorites
+          for easier access in the future.
+        </p>
+      </div>
+    </section>
+    <script type=module src=/Tasty-Treats/Tasty-Treats.3bd07d93.js></script>
+  
+
