--- a/favorites.html
+++ b/favorites.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.34248942.css><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.7b41ef18.css><link rel=stylesheet href=/Tasty-Treats/favorites.ce992728.css><body>
+<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.bb604d08.js></script><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.8217a252.css><link rel=stylesheet href=/Tasty-Treats/favorites.9f60e40c.css><body>
     <header class=header>
       <div class=header-container>
         <div class="header-container-logo light" id=light-theme-logo>
@@ -55,8 +55,8 @@
       </div>
     </header>
 
-    <section class=main-content>
-      <div class=empty-page>
+    <section class=main-content id=main-content>
+      <div id=empty-page class=empty-page>
         <img src=/Tasty-Treats/favorites-img-tablet.758190f7.png alt="food on a plate" class=favorites-img-tablet>
         <img src=/Tasty-Treats/favorites-img-desktop.975127a7.png alt="food on a plate" class=favorites-img-desktop>
         <img src=/Tasty-Treats/favorites-empty-page.3ae6dfe2.svg alt=empty-page>
@@ -66,7 +66,11 @@
           for easier access in the future.
         </p>
       </div>
+      <div id=recipe-results class=recipe-results></div>
     </section>
-    <script type=module src=/Tasty-Treats/Tasty-Treats.3bd07d93.js></script>
+    <div class=loader-overlay id=loader>
+      <div class=spinner></div>
+    </div>
+    <script type=module src=/Tasty-Treats/favorites.27a1bb72.js></script>
   
 
