--- a/favorites.html
+++ b/favorites.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.2697ab2e.js></script><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.8217a252.css><link rel=stylesheet href=/Tasty-Treats/favorites.c20a83eb.css><body>
+<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.a7dfb6f8.js></script><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.4d294fd9.css><link rel=stylesheet href=/Tasty-Treats/favorites.99517040.css><body>
     <header class=header>
       <div class=header-container>
         <div class="header-container-logo light" id=light-theme-logo>
@@ -67,10 +67,11 @@
         </p>
       </div>
       <div id=recipe-results class=recipe-results></div>
+      <div id=pagination class=pagination-controls-fav></div>
     </section>
     <div class=loader-overlay id=loader>
       <div class=spinner></div>
     </div>
-    <script type=module src=/Tasty-Treats/favorites.8ecf104c.js></script>
+    <script type=module src=/Tasty-Treats/favorites.c19ee604.js></script>
   
 
