--- a/favorites.html
+++ b/favorites.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.3e02a016.js></script><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.4d294fd9.css><link rel=stylesheet href=/Tasty-Treats/favorites.99517040.css><body>
+<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.ee8cd170.js></script><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.bd983e3c.css><link rel=stylesheet href=/Tasty-Treats/favorites.75ab389f.css><body>
     <header class=header>
       <div class=header-container>
         <div class="header-container-logo light" id=light-theme-logo>
@@ -56,22 +56,28 @@
     </header>
 
     <section class=main-content id=main-content>
-      <div id=empty-page class=empty-page>
-        <img src=/Tasty-Treats/favorites-img-tablet.758190f7.png alt="food on a plate" class=favorites-img-tablet>
-        <img src=/Tasty-Treats/favorites-img-desktop.975127a7.png alt="food on a plate" class=favorites-img-desktop>
-        <img src=/Tasty-Treats/favorites-empty-page.3ae6dfe2.svg alt=empty-page>
-        <p>
-          It appears that you haven't added any recipes to your favorites yet.
-          To get started, you can add recipes that you like to your favorites
-          for easier access in the future.
-        </p>
+      <div id=favorites-content class=favorites-content>
+        <div class=fav-img id=fav-img>
+          <img src=/Tasty-Treats/favorites-img-tablet.758190f7.png alt="food on a plate" class=favorites-img-tablet>
+          <img src=/Tasty-Treats/favorites-img-desktop.975127a7.png alt="food on a plate" class=favorites-img-desktop>
+          <img src=/Tasty-Treats/favorites-img-mobile.95c6690b.png alt="food on a plate" class=favorites-img-mobile>
+        </div>
+
+        <div id=empty-page class=empty-page>
+          <img src=/Tasty-Treats/favorites-empty-page.3ae6dfe2.svg alt=empty-page>
+          <p>
+            It appears that you haven't added any recipes to your favorites yet.
+            To get started, you can add recipes that you like to your favorites
+            for easier access in the future.
+          </p>
+        </div>
       </div>
-      <div id=recipe-results class=recipe-results></div>
+      <div id=recipe-results class=recipe-results-fav></div>
       <div id=pagination class=pagination-controls-fav></div>
     </section>
     <div class=loader-overlay id=loader>
       <div class=spinner></div>
     </div>
-    <script type=module src=/Tasty-Treats/favorites.37709c5a.js></script>
+    <script type=module src=/Tasty-Treats/favorites.45e280c2.js></script>
   
 
