--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.bcc08470.js></script><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.34248942.css><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper.min.css><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css><link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.38c3d360.css><body>
+<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.9e5967c0.js></script><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.e83239f0.css><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=icon href=/Tasty-Treats/favicon.a2cfe231.ico type=image/x-icon><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper.min.css><link rel=stylesheet href=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css><link href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.beda02b3.css><body>
     <header class=header>
       <div class=header-container>
         <div class="header-container-logo light" id=light-theme-logo>
@@ -170,16 +170,23 @@
           </div>
         </div>
         <div id=recipe-results class=recipe-results></div>
-        <div class=pagination-wrapper>
-          <div id=pagination class=pagination-controls></div>
-        </div>
+
+        <div id=pagination class=tui-pagination></div>
       </div>
     </section>
     <div class=loader-overlay id=loader>
       <div class=spinner></div>
     </div>
-
+    <footer class=footer-container>
+      <div class=copyright-container>
+        <p>
+          © 2025 | All Rights Reserved | Developed with
+          <img src=/Tasty-Treats/heart.963768a8.svg alt=heart>
+          by GoIT Students
+        </p>
+      </div>
+    </footer>
     <script src=https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js></script>
-    <script type=module src=/Tasty-Treats/Tasty-Treats.4b53e77a.js></script>
+    <script type=module src=/Tasty-Treats/Tasty-Treats.942ae7d9.js></script>
   
 
