--- a/favorites.html
+++ b/favorites.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.bcc08470.js></script><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.38c3d360.css><link rel=stylesheet href=/Tasty-Treats/favorites.b229d8e7.css><body>
+<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.9e5967c0.js></script><link rel=stylesheet href=/Tasty-Treats/favorites.db80aa57.css><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=icon href=/Tasty-Treats/favicon.a2cfe231.ico type=image/x-icon><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.beda02b3.css><link rel=stylesheet href=/Tasty-Treats/favorites.a78e29e9.css><body>
     <header class=header>
       <div class=header-container>
         <div class="header-container-logo light" id=light-theme-logo>
@@ -73,13 +73,20 @@
         </div>
       </div>
       <div id=recipe-results class=recipe-results-fav></div>
-      <div class=pagination-wrapper-fav>
-        <div id=pagination class=pagination-controls-fav></div>
-      </div>
+      <div id=pagination class=tui-pagination></div>
     </section>
     <div class=loader-overlay id=loader>
       <div class=spinner></div>
     </div>
-    <script type=module src=/Tasty-Treats/favorites.9586fe88.js></script>
+    <footer class=footer-container>
+      <div class=copyright-container>
+        <p>
+          © 2025 | All Rights Reserved | Developed with
+          <img src=/Tasty-Treats/heart.963768a8.svg alt=heart>
+          by GoIT Students
+        </p>
+      </div>
+    </footer>
+    <script type=module src=/Tasty-Treats/favorites.aef8817a.js></script>
   
 
