--- a/favorites.html
+++ b/favorites.html
@@ -1,16 +1,16 @@
-<!DOCTYPE html><html lang=en><script type=module src=/Tasty-Treats/favorites.6acb509c.js></script><link rel=stylesheet href=/Tasty-Treats/favorites.db80aa57.css><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=icon href=/Tasty-Treats/favicon.a2cfe231.ico type=image/x-icon><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=/Tasty-Treats/Tasty-Treats.337f15c3.css><link rel=stylesheet href=/Tasty-Treats/favorites.a78e29e9.css><body>
+<!DOCTYPE html><html lang=en><script type=module src=favorites.793dd66c.js></script><link rel=stylesheet href=favorites.0428f598.css><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Tasty Treats</title><link rel=icon href=favicon.a2cfe231.ico type=image/x-icon><link rel=preconnect href=https://fonts.googleapis.com><link rel=preconnect href=https://fonts.gstatic.com crossorigin><link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&amp;display=swap" rel=stylesheet><link rel=stylesheet href=favorites.a78e29e9.css><link rel=stylesheet href=Tasty-Treats.7296f98e.css><body overflow-x=hidden>
     <header class=header>
       <div class=header-container>
         <div class="header-container-logo light" id=light-theme-logo>
           <div class="desktop-list header-list">
-            <a href=/Tasty-Treats/index.html>Home</a>
-            <a href=/Tasty-Treats/favorites.html>Favorites</a>
+            <a href=index.html>Home</a>
+            <a href=favorites.html>Favorites</a>
           </div>
-          <a href=/Tasty-Treats/index.html>
-            <img src=/Tasty-Treats/logo.14db68ec.svg alt=logo id=home width=83px height=18px></a>
+          <a href=index.html>
+            <img src=logo.14db68ec.svg alt=logo id=home width=83px height=18px></a>
           <div class=header-icons>
-            <img src=/Tasty-Treats/shopping-cart.82fd3564.svg alt=logo>
-            <img src=/Tasty-Treats/burger-menu.ee09b074.svg alt=logo id=open-sidebar>
+            <img src=shopping-cart.82fd3564.svg alt=logo>
+            <img src=burger-menu.ee09b074.svg alt=logo id=open-sidebar>
 
             <label class=theme-switch>
               <input type=checkbox id=theme-toggle-light>
@@ -21,15 +21,15 @@
 
         <div class="dark header-container-logo" id=dark-theme-logo>
           <div class="desktop-list header-list">
-            <a href=/Tasty-Treats/index.html>Home</a>
-            <a href=/Tasty-Treats/favorites.html>Favorites</a>
+            <a href=index.html>Home</a>
+            <a href=favorites.html>Favorites</a>
           </div>
-          <a href=/Tasty-Treats/index.html>
-            <img src=/Tasty-Treats/logo-dark.84860f68.svg alt=logo id=home width=83px height=18px></a>
+          <a href=index.html>
+            <img src=logo-dark.84860f68.svg alt=logo id=home width=83px height=18px></a>
 
           <div class=header-icons>
-            <img src=/Tasty-Treats/shopping-cart-dark.0d1f8c3c.svg alt=logo>
-            <img src=/Tasty-Treats/burger-menu-dark.8563644c.svg alt=logo id=open-sidebar>
+            <img src=shopping-cart-dark.0d1f8c3c.svg alt=logo>
+            <img src=burger-menu-dark.8563644c.svg alt=logo id=open-sidebar>
             <label class=theme-switch>
               <input type=checkbox id=theme-toggle-dark>
               <span class=slider></span>
@@ -40,11 +40,11 @@
         <div class=sidebar id=sidebar>
           <div class=sidebar-content id=sidebar-content>
             <button class=close-sidebar id=close-sidebar>
-              <img src=/Tasty-Treats/close-sidebar.6a9c5444.svg alt=close-button>
+              <img src=close-sidebar.6a9c5444.svg alt=close-button>
             </button>
             <div class="mobile-list sidebar-list">
-              <a href=/Tasty-Treats/index.html>Home</a>
-              <a href=/Tasty-Treats/favorites.html>Favorites</a>
+              <a href=index.html>Home</a>
+              <a href=favorites.html>Favorites</a>
               <label class=theme-switch-sidebar>
                 <input type=checkbox id=theme-toggle-sidebar>
                 <span class=slider></span>
@@ -58,13 +58,13 @@
     <section class=main-content id=main-content>
       <div id=favorites-content class=favorites-content>
         <div class=fav-img id=fav-img>
-          <img src=/Tasty-Treats/favorites-img-tablet.758190f7.png alt="food on a plate" class=favorites-img-tablet>
-          <img src=/Tasty-Treats/favorites-img-desktop.975127a7.png alt="food on a plate" class=favorites-img-desktop>
-          <img src=/Tasty-Treats/favorites-img-mobile.95c6690b.png alt="food on a plate" class=favorites-img-mobile>
+          <img src=favorites-img-tablet.758190f7.png alt="food on a plate" class=favorites-img-tablet>
+          <img src=favorites-img-desktop.975127a7.png alt="food on a plate" class=favorites-img-desktop>
+          <img src=favorites-img-mobile.95c6690b.png alt="food on a plate" class=favorites-img-mobile>
         </div>
 
         <div id=empty-page class=empty-page>
-          <img src=/Tasty-Treats/favorites-empty-page.3ae6dfe2.svg alt=empty-page>
+          <img src=favorites-empty-page.3ae6dfe2.svg alt=empty-page>
           <p>
             It appears that you haven't added any recipes to your favorites yet.
             To get started, you can add recipes that you like to your favorites
@@ -80,7 +80,7 @@
     </div>
     <div class=see-recipe-modal id=see-recipe-modal>
       <div class=see-recipe-content id=see-recipe-content>
-        <img src=/Tasty-Treats/close-black.d94ef0ed.svg alt=close-button class=close-see-recipe-modal id=close-see-recipe-modal>
+        <img src=close-black.d94ef0ed.svg alt=close-button class=close-see-recipe-modal id=close-see-recipe-modal>
 
         <div class=modal-buttons id=modal-buttons>
           <button id=remove-btn class=remove-btn></button>
@@ -91,7 +91,7 @@
     </div>
     <div class=rating-modal id=rating-modal>
       <div class=rating-modal-content id=rating-modal-content>
-        <img src=/Tasty-Treats/close-black.d94ef0ed.svg alt=close-button class=close-rating-modal id=close-rating-modal>
+        <img src=close-black.d94ef0ed.svg alt=close-button class=close-rating-modal id=close-rating-modal>
         <div class=rating-container id=rating-container>
           <h3>Rating</h3>
           <div class=star-rating id=star-rating>
@@ -116,11 +116,12 @@
       <div class=copyright-container>
         <p>
           © 2025 | All Rights Reserved | Developed with
-          <img src=/Tasty-Treats/heart.963768a8.svg alt=heart>
+          <img src=heart.963768a8.svg alt=heart>
           by GoIT Students
         </p>
       </div>
     </footer>
-    <script type=module src=/Tasty-Treats/favorites.01a89b85.js></script>
+
+    <script type=module src=favorites.b2bea047.js></script>
   
 
